# finetune-compress-serve

./: .env.example  .gitignore  README.md  pyproject.toml
configs/compress/: distill_seq.yaml  pune_depth.yaml  quant_awq.yaml  quant_gptq.yaml  quant_int4.yaml  quant_int8.yaml
configs/finetune/: full_ft.yaml  lora.yaml  qlora.yaml
configs/serve/: hf_eager.yaml  hf_sdpa.yaml  vllm_awq.yaml  vllm_fp16.yaml  vllm_pruned.yaml
docs/: compress.md  finetune.md  serve.md
results/stage1/: README.md
results/stage1/full_ft/: results.json
results/stage1/lora/: results.json
results/stage1/qlora/: results.json
results/stage2/: README.md
results/stage2/prune_depth/: prune_metadata.json  results.json
results/stage2/quant_awq/: quant_awq.json  results.json
results/stage2/quant_int4/: quant_metadata (1).json  results.json
results/stage2/quant_int8/: quant_metadata.json  results.json
results/stage3/: README.md
results/stage3/hf_eager/: results.json
results/stage3/hf_sdpa/: results.json
results/stage3/vllm_awq/: results.json
results/stage3/vllm_fp16/: results.json
results/stage3/vllm_pruned/: results.json
scripts/: plot_stage1.py  plot_stage2.py  plot_stage3.py  run_compress.py  run_finetune.py  run_serve.py
src/fcs/: __init__.py
src/fcs/compress/: __init__.py  config.py  distill.py  eval.py  prune.py  quant.py
src/fcs/finetune/: __init__.py  benchmark.py  config.py  data.py  eval.py  judge.py  trainer.py
src/fcs/serve/: __init__.py  config.py  eval.py  hf_bench.py  vllm_bench.py
